<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_businesscard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.krupa.businesscard.Businesscard">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:paddingTop="4dp"
        android:text="@string/coworking"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:paddingTop="2dp"
        android:text="@string/address1"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="2dp"
        android:paddingLeft="68dp"
        android:text="@string/address2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address"
        android:paddingTop="2dp"
        android:text="@string/telephone"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact"
        android:text="@string/mobile"
        android:textColor="@android:color/black"
        android:paddingTop="2dp"
        android:paddingLeft="68dp"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/facebook"
        android:layout_toEndOf="@+id/facebook"
        android:layout_toRightOf="@+id/facebook"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        android:text="@string/fb"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/coworking" />

    <ImageView
        android:id="@+id/twitter1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/facebook"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/facebook"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        app:srcCompat="@drawable/twittericon" />

    <ImageView
        android:id="@+id/insta"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/facebook"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/facebook"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/Gs"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/twitter1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/twitter1"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/Gs"
        android:layout_toRightOf="@+id/Gs"
        android:paddingLeft="4dp"
        android:text="thecohub"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/instagram"
        android:layout_alignTop="@+id/instagram"
        android:layout_toEndOf="@+id/Gs"
        android:layout_toRightOf="@+id/Gs"
        android:paddingLeft="4dp"
        android:text="@string/google"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/insta"
        android:layout_toRightOf="@+id/insta"
        android:paddingLeft="4dp"
        android:text="@string/instagram"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/insta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        app:srcCompat="@drawable/facebookicon" />

    <TextView
        android:text="@string/mailid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:paddingTop="2dp"
        android:id="@+id/email"
        android:layout_below="@+id/mobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
